[package]
name = "kapta"
edition = "2021"
authors = ["LangPham"]
license = "MIT"
description = "Kapta ~ Map"
version.workspace = true
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.5.1",  features = ["csr"]}


log = "0.4.6"
wasm-logger = "0.2.0"


# nalgebra = "0.32"
geo = "0.26.0"
geo-types = "0.7.11"
approx = "0.5"


# proj = { version="0.27.2", features = []} // dependent C++