[package]
name = "kapta"
version.workspace = true
edition = "2021"
authors = ["LangPham"]
license = "MIT"
description = "Kapta ~ Inspired by leaflet"
repository = "https://github.com/theta-vn/kapta"
readme = "../README.md"

[dependencies]
geo = "0.26.0"
geo-types = {version="0.7.11", features = ["serde"]}
approx = "0.5"
