[package]
name = "leptos_kapta"
edition = "2021"
version.workspace = true
authors = ["LangPham"]
license = "MIT"
description = "Kapta ~ Inspired by leaflet. Draw map with wasm"
repository = "https://github.com/theta-vn/kapta"
readme = "../../README.md"

[dependencies]
kapta = { path = "../../kapta" ,version = "0.0.3" }
leptos = { version = "0.5.2", features = ["csr"] }
leptos-use = { version = "0.8" }
geojson = "0.24.1"
log = "0.4.6"
wasm-logger = "0.2.0"

